2021-11-04 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Don't fail on missing new line at end of config file (closes: #108)

2021-10-03 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Support CRLF line-endings in config files (closes: #107)

2021-06-06 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix handling of --without-posix-acl configure option,
	  thanks to Ilya Tumaykin for the patch
	* Mention removal of -r, --report command line option in man page

2021-06-05 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Only use the return value of time function

2021-05-24	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix type of database file pointer (closes: #98)

2021-05-01	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Document how to ignore read-only ext2 file attributes (closes: #47)
	* Add @@if macro
	  - deprecate '@@ifdef', use '@@if defined' instead
	  - deprecate '@@ifndef', use '@@if not defined' instead
	  - deprecate '@@ifhost', use '@@if hostame' instead
	  - deprecate '@@ifnhost', use '@@if not hostname' instead
	* Add 'exists' boolean function (closes: #87)

2021-04-25	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Refactor e2fsattrs code
	* Improve warning message for cutoff database line (closes: #91)

2021-04-21	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Add 'config_check_warn_unrestricted_rules' option (closes: #44)

2021-04-18	Hannes von Haugwitz  <hannes@vonhaugwitz.com>
	* Improve error message for negative rule with an
	  attribute expression (closes: #90)
	* Document changed_attributes report level format (closes: #95)

2021-02-10  Hannes von Haugwitz  <hannes@vonhaugwitz.com>
	* Release aide 0.17.3

2021-02-07  Hannes von Haugwitz  <hannes@vonhaugwitz.com>
	* Fix group usage in '--after' config line

2021-02-06  Hannes von Haugwitz  <hannes@vonhaugwitz.com>
	* Release aide 0.17.2

2021-02-02  Hannes von Haugwitz  <hannes@vonhaugwitz.com>
	* Fix null pointer dereference in db_close()
	* Fix out-of-bounds read of attributes array
