@@ -677,7 +677,7 @@ but are ignored in the report.
 
 .B Hashsums groups
 .RS 3
-.IP "md5: MD5 checksum"
+.IP "md5: MD5 checksum (not in \fIlibgcrypt\fR FIPS mode)"
 .IP "sha1: SHA-1 checksum"
 .IP "sha256: SHA-256 checksum"
 .IP "sha512: SHA-512 checksum"
