@@ -61,6 +61,11 @@ char* after = NULL;
 #define MAXHOSTNAMELEN 256
 #endif
 
+#ifdef WITH_GCRYPT
+#include <gcrypt.h>
+#define NEED_LIBGCRYPT_VERSION "1.8.0"
+#endif
+
 static void usage(int exitvalue)
 {
   fprintf(stdout,
@@ -99,6 +104,18 @@ static void init_sighandler()
   signal(SIGHUP,sig_handler);
 
   return;
+}
+
+static void init_crypto_lib() {
+/* libmhash does not need to be initialized */
+#ifdef WITH_GCRYPT
+  if(!gcry_check_version(NEED_LIBGCRYPT_VERSION)) {
+      log_msg(LOG_LEVEL_ERROR, "libgcrypt is too old (need %s, have %s)", NEED_LIBGCRYPT_VERSION, gcry_check_version (NULL));
+      exit(VERSION_MISMATCH_ERROR);
+  }
+  gcry_control(GCRYCTL_DISABLE_SECMEM, 0);
+  gcry_control(GCRYCTL_INITIALIZATION_FINISHED, 0);
+#endif
 }
 
 static void sig_handler(int signum)
@@ -479,11 +496,21 @@ static void setdefaults_before_config()
 
   DB_ATTR_TYPE common_attrs = ATTR(attr_perm)|ATTR(attr_ftype)|ATTR(attr_inode)|ATTR(attr_linkcount)|ATTR(attr_uid)|ATTR(attr_gid);
 
-  do_groupdef("R",common_attrs|ATTR(attr_size)|ATTR(attr_linkname)|ATTR(attr_mtime)|ATTR(attr_ctime)
-#if defined(WITH_MHASH) || defined(WITH_GCRYPT)
-          |ATTR(attr_md5)
+  DB_ATTR_TYPE GROUP_R_HASHES=0LLU;
+#ifdef WITH_MHASH
+  GROUP_R_HASHES=ATTR(attr_md5);
 #endif
-          |X);
+#ifdef WITH_GCRYPT
+  if (gcry_fips_mode_active()) {
+    char* str;
+    log_msg(LOG_LEVEL_NOTICE, "libgcrypt is running in FIPS mode, the following hash(es) are not available: %s", str = diff_attributes(0, ATTR(attr_md5)));
+    free(str);
+  } else {
+    GROUP_R_HASHES = ATTR(attr_md5);
+  }
+#endif
+
+  do_groupdef("R",common_attrs|ATTR(attr_size)|ATTR(attr_linkname)|ATTR(attr_mtime)|ATTR(attr_ctime)|GROUP_R_HASHES|X);
   do_groupdef("L",common_attrs|ATTR(attr_linkname)|X);
   do_groupdef(">",common_attrs|ATTR(attr_sizeg)|ATTR(attr_linkname)|X);
   do_groupdef("H",get_hashes(false));
@@ -537,6 +564,8 @@ int main(int argc,char**argv)
 #endif
   umask(0177);
   init_sighandler();
+
+  init_crypto_lib();
 
   setdefaults_before_config();
 
