@@ -1,3 +1,6 @@
+2021-11-05 Hannes von Haugwitz <hannes@vonhaugwitz.com>
+	* Disable MD5 hashsum if in libgcrypt FIPS mode (closes: #110)
+
 2021-11-04 Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* Don't fail on missing new line at end of config file (closes: #108)
 
